--- a/hibernatebasics/build.gradle
+++ b/hibernatebasics/build.gradle
@@ -11,4 +11,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.2.18.Final'
+    implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
 }
