--- a/hibernatebasics/build.gradle
+++ b/hibernatebasics/build.gradle
@@ -12,5 +12,10 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.2.18.Final'
-    implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
+    //implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
+    implementation group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
+    //implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
+    //implementation('javax.activation:activation:1.1')
+    //implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.1'
+
 }
