--- a/hibernatebasics/build.gradle
+++ b/hibernatebasics/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.2.18.Final'
+    implementation group: 'org.hibernate', name: 'hibernate-ehcache', version: '5.2.18.Final'
     //implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.19'
     //implementation group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
